# Mitrailleuse

./: .gitignore  Dockerfile  README.md  batch_workflow.py  create_task.py  main.py  pyproject.toml  requirements.txt  send_single.py  setup.py
archive/: mitrailleuse_pb2.py
mitrailleuse/: __init__.py  mitrailleuse_pb2.py  mitrailleuse_pb2_grpc.py
mitrailleuse/application/: __init__.py
mitrailleuse/application/ports/: api_port.py  cache_port.py
mitrailleuse/application/services/: request_service.py  task_service.py
mitrailleuse/config/: config.json  config.py  deepl_config.py  deepseek_config.py  openai_config.py
mitrailleuse/domain/: __init__.py  models.py
mitrailleuse/infrastructure/: __init__.py  settings.py
mitrailleuse/infrastructure/adapters/: deepl_adapter.py  deepseek_adapter.py  file_cache_adapter.py  memory_cache_adapter.py  openai_adapter.py
mitrailleuse/infrastructure/grpc/: client_example.py  server.py
mitrailleuse/proto/: mitrailleuse.proto  prompt.txt
mitrailleuse/protos/: mitrailleuse.proto
mitrailleuse/scripts/: config.json  format_response.py  langchain_client.py  simple_client.py  test_similarity.py
mitrailleuse/tests/: conftest.py  test_adapters.py  test_config.py  test_config_roundtrip.py  test_deepl_adapter.py  test_deepseek_adapter.py  test_file_converter.py  test_file_utils.py  test_format_response.py  test_grpc_endpoints.py  test_logger.py  test_openai_adapter.py  test_ports.py  test_prompt_utils.py  test_request_service.py  test_similarty_checker.py  test_simple_client.py  test_task_service.py
(+24 files in other folders)
