[tool.poetry]
name = "mitrailleuse"
version = "0.1.0"
description = "Multi-provider AI request launcher & batch-runner supporting OpenAI, DeepSeek, and DeepL, with a gRPC façade, Dockerised runtime, and sampling-aware task folders."
authors = ["theFellandes <oguzhan@divabt.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
httpx = "^0.28.1"
openai = "^1.77.0"
pydantic = "^2.11.4"
python-dotenv = "^1.1.0"
tqdm = "^4.67.1"
numpy = "^2.2.6"
scipy = "^1.15.3"
requests = "^2.32.3"
colorama = "^0.4.6"
tenacity = "^9.1.2"
datasketch = "^1.6.5"
jieba = "^0.42.1"
protobuf = "^5.29.4"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
typing-extensions = "^4.13.2"
setuptools = "^80.1.0"
wheel = "^0.45.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"

[tool.poetry.scripts]
mitrailleuse-grpc = "mitrailleuse.infrastructure.grpc.server:serve"
mitrailleuse-cli = "mitrailleuse.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 